--- a/bab2-teorema-pythagoras.html
+++ b/bab2-teorema-pythagoras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bab 1: Bilangan Berpangkat | MathMaster8</title>
+    <title>Bab 2: Teorema Pythagoras | MathMaster8</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,7 +19,12 @@
             --primary-light: #14b8a6;
             --primary-soft: #ccfbf1;
             --primary-dark: #0f766e;
-            --accent: #f59e0b;
+            --secondary: #f59e0b;
+            --secondary-light: #fbbf24;
+            --secondary-soft: #fff3cd;
+            --accent: #8b5cf6;
+            --accent-light: #a78bfa;
+            --accent-soft: #ede9fe;
             --success: #22c55e;
             --danger: #ef4444;
             --dark: #0f172a;
@@ -30,7 +35,6 @@
             --gray-100: #f1f5f9;
             --gray-200: #e2e8f0;
             --gray-300: #cbd5e1;
-            --gray-600: #475569;
             --shadow-sm: 0 1px 3px 0 rgba(0,0,0,0.05);
             --shadow: 0 10px 25px -5px rgba(0,0,0,0.05);
             --shadow-lg: 0 20px 40px -15px rgba(13,148,136,0.15);
@@ -111,7 +115,7 @@
         }
 
         .chapter-header::before {
-            content: "🔢";
+            content: "📐";
             position: absolute;
             font-size: 200px;
             top: -50px;
@@ -271,7 +275,7 @@
            5. FINAL CARD
            ========================================= */
         .final-card {
-            background: linear-gradient(145deg, var(--accent), #b45309);
+            background: linear-gradient(145deg, var(--primary), var(--primary-dark));
             border: none;
         }
         .final-card .icon-box {
@@ -423,15 +427,15 @@
         <a href="index.html" class="back-link">
             <i class="fas fa-arrow-left"></i> Kembali ke Beranda
         </a>
-        <span class="chapter-badge"><i class="fas fa-star"></i> Bab 1: Bilangan Berpangkat</span>
+        <span class="chapter-badge"><i class="fas fa-star"></i> Bab 2: Teorema Pythagoras</span>
     </div>
 
     <!-- Hero Section -->
     <header class="chapter-header">
         <div class="animate">
-            <p style="font-size: 0.8rem; letter-spacing: 3px; margin-bottom: 10px;">UNIT PEMBELAJARAN 01</p>
-            <h1>Bilangan Berpangkat</h1>
-            <p>Mengeksplorasi dunia angka besar dan kecil melalui konsep perpangkatan, penarikan akar, dan notasi ilmiah yang efisien.</p>
+            <p style="font-size: 0.8rem; letter-spacing: 3px; margin-bottom: 10px;">UNIT PEMBELAJARAN 02</p>
+            <h1>Teorema Pythagoras</h1>
+            <p>Menemukan, membuktikan, dan menerapkan hubungan fundamental antara sisi-sisi segitiga siku-siku dalam berbagai konteks.</p>
         </div>
     </header>
 
@@ -439,54 +443,95 @@
     <main class="container">
         <div class="learning-grid">
             
-            <!-- Sub Bab 1: Sifat-sifat Eksponen -->
-            <div class="sub-card animate" style="animation-delay: 0.1s;" onclick="location.href='sub1-1-eksponen.html'">
+            <!-- Sub Bab A: Menemukan Konsep Pythagoras -->
+            <div class="sub-card animate" style="animation-delay: 0.1s;" onclick="location.href='sub2-1-konsep.html'">
                 <div class="icon-box">
-                    <i class="fas fa-superscript"></i>
+                    <i class="fas fa-search"></i>
                 </div>
                 <div class="sub-info">
                     <div class="tag-group">
                         <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
-                        <span class="tag tag-doc"><i class="fas fa-file-alt"></i> Materi</span>
+                        <span class="tag tag-interactive"><i class="fas fa-cubes"></i> Eksperimen</span>
+                        <span class="tag tag-doc"><i class="fas fa-file-alt"></i> Penemuan</span>
                     </div>
-                    <h3>Sifat-sifat Eksponen</h3>
-                    <p>Pelajari perkalian, pembagian, dan perpangkatan pada bilangan berpangkat bulat positif dan negatif.</p>
+                    <h3>A. Menemukan Konsep Pythagoras</h3>
+                    <p>Eksplorasi hubungan kuadrat sisi-sisi segitiga siku-siku melalui aktivitas dan pembuktian visual interaktif.</p>
                 </div>
                 <div class="btn-enter">
                     <i class="fas fa-chevron-right"></i>
                 </div>
             </div>
 
-            <!-- Sub Bab 2: Bilangan Akar -->
-            <div class="sub-card animate" style="animation-delay: 0.2s;" onclick="location.href='sub1-2-akar.html'">
+            <!-- Sub Bab B: Tripel Pythagoras -->
+            <div class="sub-card animate" style="animation-delay: 0.2s;" onclick="location.href='sub2-2-tripel.html'">
                 <div class="icon-box">
-                    <i class="fas fa-square-root-variable"></i>
+                    <i class="fas fa-hashtag"></i>
                 </div>
                 <div class="sub-info">
                     <div class="tag-group">
                         <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
-                        <span class="tag tag-interactive"><i class="fas fa-calculator"></i> Interaktif</span>
+                        <span class="tag tag-interactive"><i class="fas fa-calculator"></i> Generator</span>
+                        <span class="tag tag-doc"><i class="fas fa-list"></i> Daftar</span>
                     </div>
-                    <h3>Bilangan Akar</h3>
-                    <p>Menyederhanakan bentuk akar dan memahami hubungan antara pangkat pecahan dengan bentuk akar.</p>
+                    <h3>B. Tripel Pythagoras</h3>
+                    <p>Tiga bilangan asli yang memenuhi teorema. Pelajari pola, rumus Euclid, dan cara menghasilkan ribuan tripel.</p>
                 </div>
                 <div class="btn-enter">
                     <i class="fas fa-chevron-right"></i>
                 </div>
             </div>
 
-            <!-- Sub Bab 3: Notasi Ilmiah -->
-            <div class="sub-card animate" style="animation-delay: 0.3s;" onclick="location.href='sub1-3-notasi.html'">
+            <!-- Sub Bab C: Segitiga Istimewa -->
+            <div class="sub-card animate" style="animation-delay: 0.3s;" onclick="location.href='sub2-3-istimewa.html'">
                 <div class="icon-box">
-                    <i class="fas fa-microscope"></i>
+                    <i class="fas fa-triangle"></i>
                 </div>
                 <div class="sub-info">
                     <div class="tag-group">
-                        <span class="tag tag-doc"><i class="fas fa-pencil-alt"></i> Latihan</span>
-                        <span class="tag tag-interactive"><i class="fas fa-robot"></i> Simulator</span>
+                        <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
+                        <span class="tag tag-interactive"><i class="fas fa-ruler"></i> Simulator</span>
+                        <span class="tag tag-doc"><i class="fas fa-pencil-alt"></i> Rumus Cepat</span>
                     </div>
-                    <h3>Notasi Ilmiah</h3>
-                    <p>Cara menuliskan angka yang sangat besar atau sangat kecil secara ringkas menggunakan pangkat sepuluh.</p>
+                    <h3>C. Segitiga Istimewa</h3>
+                    <p>Segitiga siku-siku dengan sudut 30°-60°-90° dan 45°-45°-90°. Perbandingan sisi yang tetap dan aplikasinya.</p>
+                </div>
+                <div class="btn-enter">
+                    <i class="fas fa-chevron-right"></i>
+                </div>
+            </div>
+
+            <!-- Sub Bab D: Penerapan Teorema Pythagoras -->
+            <div class="sub-card animate" style="animation-delay: 0.4s;" onclick="location.href='sub2-4-penerapan.html'">
+                <div class="icon-box">
+                    <i class="fas fa-shapes"></i>
+                </div>
+                <div class="sub-info">
+                    <div class="tag-group">
+                        <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
+                        <span class="tag tag-interactive"><i class="fas fa-ruler-combined"></i> Simulasi</span>
+                        <span class="tag tag-quiz"><i class="fas fa-brain"></i> HOTS</span>
+                    </div>
+                    <h3>D. Penerapan Pythagoras</h3>
+                    <p>Aplikasi dalam bangun datar, bangun ruang, dan masalah kontekstual sehari-hari. Dilengkapi soal HOTS.</p>
+                </div>
+                <div class="btn-enter">
+                    <i class="fas fa-chevron-right"></i>
+                </div>
+            </div>
+
+            <!-- Sub Bab E: Rumus Jarak (Pengayaan) -->
+            <div class="sub-card animate" style="animation-delay: 0.5s;" onclick="location.href='sub2-5-jarak.html'">
+                <div class="icon-box">
+                    <i class="fas fa-arrows-alt"></i>
+                </div>
+                <div class="sub-info">
+                    <div class="tag-group">
+                        <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
+                        <span class="tag tag-interactive"><i class="fas fa-map-marker-alt"></i> Visual</span>
+                        <span class="tag tag-doc"><i class="fas fa-star"></i> Pengayaan</span>
+                    </div>
+                    <h3>E. Rumus Jarak (Pengayaan)</h3>
+                    <p>Menentukan jarak antara dua titik pada bidang koordinat menggunakan turunan Teorema Pythagoras.</p>
                 </div>
                 <div class="btn-enter">
                     <i class="fas fa-chevron-right"></i>
@@ -494,7 +539,7 @@
             </div>
 
             <!-- Final Test Card -->
-            <div class="sub-card final-card animate" style="animation-delay: 0.4s;" onclick="location.href='kuis-bab1.html'">
+            <div class="sub-card final-card animate" style="animation-delay: 0.6s;" onclick="location.href='kuis-bab2.html'">
                 <div class="icon-box" style="background: rgba(255,255,255,0.2); color: white;">
                     <i class="fas fa-trophy"></i>
                 </div>
@@ -502,8 +547,8 @@
                     <div class="tag-group">
                         <span class="tag" style="background: #ffedd5; color: #7b341e;">🏆 Final Test</span>
                     </div>
-                    <h3>Uji Kompetensi Bab 1</h3>
-                    <p>Evaluasi pemahamanmu tentang eksponen, akar, dan notasi ilmiah dalam satu tes terpadu.</p>
+                    <h3>Uji Kompetensi Bab 2</h3>
+                    <p>Evaluasi pemahamanmu tentang Teorema Pythagoras, Tripel, Segitiga Istimewa, Penerapan, dan Rumus Jarak.</p>
                 </div>
                 <div class="btn-enter" style="background: rgba(255,255,255,0.2); color: white;">
                     <i class="fas fa-play"></i>
@@ -512,30 +557,38 @@
         </div>
 
         <!-- Capaian Pembelajaran -->
-        <div class="curriculum-box animate" style="animation-delay: 0.5s;">
+        <div class="curriculum-box animate" style="animation-delay: 0.7s;">
             <div class="cp-text">
                 <h2>📌 Capaian Pembelajaran</h2>
-                <p>Di akhir fase D, peserta didik dapat membaca, menulis, dan membandingkan bilangan bulat, bilangan rasional dan irasional, bilangan desimal, bilangan berpangkat bulat dan akar, bilangan dalam notasi ilmiah.</p>
+                <p>Di akhir fase D, peserta didik dapat membuktikan dan menerapkan Teorema Pythagoras untuk menentukan jarak, panjang diagonal, dan menyelesaikan masalah kontekstual yang berkaitan dengan bangun datar, bangun ruang, dan bidang koordinat.</p>
+                <p style="margin-top: 15px; font-size: 0.9rem;"><i class="fas fa-check-circle" style="color: var(--primary-light);"></i> Tujuan Pembelajaran:</p>
+                <ul style="margin-left: 20px; list-style-type: disc; opacity: 0.9;">
+                    <li>Menemukan dan membuktikan kebenaran Teorema Pythagoras.</li>
+                    <li>Menentukan tripel Pythagoras dan mengidentifikasi jenis segitiga.</li>
+                    <li>Memahami perbandingan sisi segitiga istimewa (30-60-90 dan 45-45-90).</li>
+                    <li>Menerapkan teorema untuk menghitung keliling, luas, diagonal, dan jarak.</li>
+                    <li>Menggunakan rumus jarak pada bidang koordinat sebagai bentuk pengayaan.</li>
+                </ul>
             </div>
             <div class="cp-stats">
                 <div class="stat-circle">
                     <i class="fas fa-clock"></i>
-                    <span>12 JP</span>
+                    <span>18 JP</span>
                     <label>Alokasi Waktu</label>
                 </div>
                 <div class="stat-circle">
                     <i class="fas fa-brain"></i>
-                    <span>3 Sub</span>
+                    <span>5 Sub</span>
                     <label>Kompetensi</label>
                 </div>
                 <div class="stat-circle">
                     <i class="fas fa-video"></i>
-                    <span>4 Video</span>
+                    <span>7 Video</span>
                     <label>Pembahasan</label>
                 </div>
                 <div class="stat-circle">
                     <i class="fas fa-question-circle"></i>
-                    <span>20+ Soal</span>
+                    <span>35+ Soal</span>
                     <label>Latihan</label>
                 </div>
             </div>
@@ -544,7 +597,7 @@
 
     <footer>
         <p>&copy; 2024 MathMaster8 - Kurikulum Merdeka | Matematika Kelas VIII</p>
-        <p style="margin-top: 8px; opacity: 0.6;">"Matematika adalah bahasa alam semesta." - Galileo Galilei</p>
+        <p style="margin-top: 8px; opacity: 0.6;">"Segitiga adalah bahasa alam semesta." - Pythagoras</p>
     </footer>
 
     <script>
