--- a/bab3-plsv-ptlsv.html
+++ b/bab3-plsv-ptlsv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bab 1: Bilangan Berpangkat | MathMaster8</title>
+    <title>Bab 3: Persamaan & Pertidaksamaan Linier | MathMaster8</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,6 +19,9 @@
             --primary-light: #14b8a6;
             --primary-soft: #ccfbf1;
             --primary-dark: #0f766e;
+            --tertiary: #8b5cf6;
+            --tertiary-light: #a78bfa;
+            --tertiary-soft: #ede9fe;
             --accent: #f59e0b;
             --success: #22c55e;
             --danger: #ef4444;
@@ -33,7 +36,7 @@
             --gray-600: #475569;
             --shadow-sm: 0 1px 3px 0 rgba(0,0,0,0.05);
             --shadow: 0 10px 25px -5px rgba(0,0,0,0.05);
-            --shadow-lg: 0 20px 40px -15px rgba(13,148,136,0.15);
+            --shadow-lg: 0 20px 40px -15px rgba(139,92,246,0.15);
             --transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             --border-radius: 24px;
             --border-radius-lg: 32px;
@@ -74,7 +77,7 @@
             display: flex;
             align-items: center;
             gap: 12px;
-            color: var(--primary);
+            color: var(--tertiary);
             text-decoration: none;
             font-weight: 700;
             font-size: 0.95rem;
@@ -83,7 +86,7 @@
 
         .back-link:hover {
             transform: translateX(-6px);
-            color: var(--primary-dark);
+            color: var(--tertiary);
         }
 
         .chapter-badge {
@@ -91,8 +94,8 @@
             font-weight: 800;
             text-transform: uppercase;
             letter-spacing: 1.5px;
-            color: var(--primary);
-            background: var(--primary-soft);
+            color: var(--tertiary);
+            background: var(--tertiary-soft);
             padding: 6px 18px;
             border-radius: 60px;
         }
@@ -101,7 +104,7 @@
            3. HERO SECTION (KONSISTEN)
            ========================================= */
         .chapter-header {
-            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+            background: linear-gradient(135deg, var(--tertiary) 0%, #6d28d9 100%);
             color: white;
             padding: 80px 5% 120px;
             text-align: center;
@@ -111,7 +114,7 @@
         }
 
         .chapter-header::before {
-            content: "🔢";
+            content: "⚖️";
             position: absolute;
             font-size: 200px;
             top: -50px;
@@ -174,7 +177,7 @@
             left: 0;
             width: 6px;
             height: 100%;
-            background: var(--primary);
+            background: var(--tertiary);
             opacity: 0;
             transition: var(--transition);
         }
@@ -182,7 +185,7 @@
         .sub-card:hover {
             transform: translateY(-5px) scale(1.01);
             box-shadow: var(--shadow-lg);
-            border-color: var(--primary-light);
+            border-color: var(--tertiary-light);
         }
 
         .sub-card:hover::before {
@@ -192,18 +195,18 @@
         .icon-box {
             width: 120px;
             height: 120px;
-            background: var(--primary-soft);
+            background: var(--tertiary-soft);
             border-radius: 30px;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 48px;
-            color: var(--primary-dark);
+            color: var(--tertiary);
             transition: var(--transition);
         }
 
         .sub-card:hover .icon-box {
-            background: var(--primary);
+            background: var(--tertiary);
             color: white;
             transform: rotate(5deg);
         }
@@ -251,18 +254,18 @@
         .btn-enter {
             width: 60px;
             height: 60px;
-            background: var(--primary-soft);
+            background: var(--tertiary-soft);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: var(--primary-dark);
+            color: var(--tertiary);
             font-size: 1.2rem;
             transition: var(--transition);
         }
 
         .sub-card:hover .btn-enter {
-            background: var(--primary);
+            background: var(--tertiary);
             color: white;
             transform: translateX(8px);
         }
@@ -271,7 +274,7 @@
            5. FINAL CARD
            ========================================= */
         .final-card {
-            background: linear-gradient(145deg, var(--accent), #b45309);
+            background: linear-gradient(145deg, var(--tertiary), #6d28d9);
             border: none;
         }
         .final-card .icon-box {
@@ -305,7 +308,7 @@
         }
 
         .curriculum-box::after {
-            content: "📏";
+            content: "=";
             position: absolute;
             font-size: 150px;
             bottom: -30px;
@@ -322,7 +325,7 @@
         }
 
         .cp-text h2 {
-            color: var(--primary-light);
+            color: var(--tertiary-light);
             margin-bottom: 15px;
             font-size: 1.8rem;
             font-weight: 700;
@@ -355,7 +358,7 @@
 
         .stat-circle i {
             font-size: 26px;
-            color: var(--primary-light);
+            color: var(--tertiary-light);
             margin-bottom: 12px;
         }
 
@@ -423,15 +426,15 @@
         <a href="index.html" class="back-link">
             <i class="fas fa-arrow-left"></i> Kembali ke Beranda
         </a>
-        <span class="chapter-badge"><i class="fas fa-star"></i> Bab 1: Bilangan Berpangkat</span>
+        <span class="chapter-badge"><i class="fas fa-star"></i> Bab 3: PLSV & PtLSV</span>
     </div>
 
     <!-- Hero Section -->
     <header class="chapter-header">
         <div class="animate">
-            <p style="font-size: 0.8rem; letter-spacing: 3px; margin-bottom: 10px;">UNIT PEMBELAJARAN 01</p>
-            <h1>Bilangan Berpangkat</h1>
-            <p>Mengeksplorasi dunia angka besar dan kecil melalui konsep perpangkatan, penarikan akar, dan notasi ilmiah yang efisien.</p>
+            <p style="font-size: 0.8rem; letter-spacing: 3px; margin-bottom: 10px;">UNIT PEMBELAJARAN 03</p>
+            <h1>Persamaan & Pertidaksamaan Linier</h1>
+            <p>Memahami konsep kesetaraan dan ketidaksetaraan, menyelesaikan persamaan dan pertidaksamaan linier satu variabel, serta mengaplikasikannya dalam pemecahan masalah sehari-hari.</p>
         </div>
     </header>
 
@@ -439,54 +442,76 @@
     <main class="container">
         <div class="learning-grid">
             
-            <!-- Sub Bab 1: Sifat-sifat Eksponen -->
-            <div class="sub-card animate" style="animation-delay: 0.1s;" onclick="location.href='sub1-1-eksponen.html'">
+            <!-- Sub Bab A: Memahami Konsep Persamaan Linier Satu Variabel -->
+            <div class="sub-card animate" style="animation-delay: 0.1s;" onclick="location.href='sub3-1-konsep-plsv.html'">
                 <div class="icon-box">
-                    <i class="fas fa-superscript"></i>
+                    <i class="fas fa-balance-scale-left"></i>
                 </div>
                 <div class="sub-info">
                     <div class="tag-group">
                         <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
-                        <span class="tag tag-doc"><i class="fas fa-file-alt"></i> Materi</span>
+                        <span class="tag tag-doc"><i class="fas fa-file-alt"></i> Konsep</span>
+                        <span class="tag tag-interactive"><i class="fas fa-cubes"></i> Visual</span>
                     </div>
-                    <h3>Sifat-sifat Eksponen</h3>
-                    <p>Pelajari perkalian, pembagian, dan perpangkatan pada bilangan berpangkat bulat positif dan negatif.</p>
+                    <h3>A. Konsep Persamaan Linier</h3>
+                    <p>Pelajari pengertian, bentuk umum, dan prinsip keseimbangan dalam persamaan linier satu variabel (PLSV).</p>
                 </div>
                 <div class="btn-enter">
                     <i class="fas fa-chevron-right"></i>
                 </div>
             </div>
 
-            <!-- Sub Bab 2: Bilangan Akar -->
-            <div class="sub-card animate" style="animation-delay: 0.2s;" onclick="location.href='sub1-2-akar.html'">
+            <!-- Sub Bab B: Menyelesaikan Persamaan Linier Satu Variabel -->
+            <div class="sub-card animate" style="animation-delay: 0.2s;" onclick="location.href='sub3-2-menyelesaikan-plsv.html'">
                 <div class="icon-box">
-                    <i class="fas fa-square-root-variable"></i>
+                    <i class="fas fa-calculator"></i>
                 </div>
                 <div class="sub-info">
                     <div class="tag-group">
                         <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
-                        <span class="tag tag-interactive"><i class="fas fa-calculator"></i> Interaktif</span>
+                        <span class="tag tag-interactive"><i class="fas fa-pencil-alt"></i> Step-by-Step</span>
+                        <span class="tag tag-quiz"><i class="fas fa-check"></i> Latihan</span>
                     </div>
-                    <h3>Bilangan Akar</h3>
-                    <p>Menyederhanakan bentuk akar dan memahami hubungan antara pangkat pecahan dengan bentuk akar.</p>
+                    <h3>B. Menyelesaikan PLSV</h3>
+                    <p>Tahapan menyelesaikan PLSV: penjumlahan, pengurangan, perkalian, pembagian, dan kasus khusus.</p>
                 </div>
                 <div class="btn-enter">
                     <i class="fas fa-chevron-right"></i>
                 </div>
             </div>
 
-            <!-- Sub Bab 3: Notasi Ilmiah -->
-            <div class="sub-card animate" style="animation-delay: 0.3s;" onclick="location.href='sub1-3-notasi.html'">
+            <!-- Sub Bab C: Menemukan Konsep Pertidaksamaan Linier Satu Variabel -->
+            <div class="sub-card animate" style="animation-delay: 0.3s;" onclick="location.href='sub3-3-konsep-ptlsv.html'">
                 <div class="icon-box">
-                    <i class="fas fa-microscope"></i>
+                    <i class="fas fa-not-equal"></i>
                 </div>
                 <div class="sub-info">
                     <div class="tag-group">
-                        <span class="tag tag-doc"><i class="fas fa-pencil-alt"></i> Latihan</span>
-                        <span class="tag tag-interactive"><i class="fas fa-robot"></i> Simulator</span>
+                        <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
+                        <span class="tag tag-doc"><i class="fas fa-file-alt"></i> Konsep</span>
+                        <span class="tag tag-interactive"><i class="fas fa-chart-line"></i> Garis Bilangan</span>
                     </div>
-                    <h3>Notasi Ilmiah</h3>
-                    <p>Cara menuliskan angka yang sangat besar atau sangat kecil secara ringkas menggunakan pangkat sepuluh.</p>
+                    <h3>C. Konsep Pertidaksamaan Linier</h3>
+                    <p>Perbedaan persamaan dan pertidaksamaan, tanda <, >, ≤, ≥, serta representasi pada garis bilangan.</p>
+                </div>
+                <div class="btn-enter">
+                    <i class="fas fa-chevron-right"></i>
+                </div>
+            </div>
+
+            <!-- Sub Bab D: Menyelesaikan Masalah PtLSV -->
+            <div class="sub-card animate" style="animation-delay: 0.4s;" onclick="location.href='sub3-4-menyelesaikan-ptlsv.html'">
+                <div class="icon-box">
+                    <i class="fas fa-puzzle-piece"></i>
+                </div>
+                <div class="sub-info">
+                    <div class="tag-group">
+                        <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
+                        <span class="tag tag-interactive"><i class="fas fa-brain"></i> HOTS</span>
+                        <span class="tag tag-quiz"><i class="fas fa-pencil-alt"></i> Soal Cerita</span>
+                    </div>
+                    <h3>D. Masalah Pertidaksamaan Linier</h3>
+                    <p>Aplikasi PtLSV dalam kehidupan sehari-hari: batas usia, keuntungan, pengeluaran, dan problem solving.</p>
                 </div>
                 <div class="btn-enter">
                     <i class="fas fa-chevron-right"></i>
@@ -494,7 +519,7 @@
             </div>
 
             <!-- Final Test Card -->
-            <div class="sub-card final-card animate" style="animation-delay: 0.4s;" onclick="location.href='kuis-bab1.html'">
+            <div class="sub-card final-card animate" style="animation-delay: 0.5s;" onclick="location.href='kuis-bab3.html'">
                 <div class="icon-box" style="background: rgba(255,255,255,0.2); color: white;">
                     <i class="fas fa-trophy"></i>
                 </div>
@@ -502,8 +527,8 @@
                     <div class="tag-group">
                         <span class="tag" style="background: #ffedd5; color: #7b341e;">🏆 Final Test</span>
                     </div>
-                    <h3>Uji Kompetensi Bab 1</h3>
-                    <p>Evaluasi pemahamanmu tentang eksponen, akar, dan notasi ilmiah dalam satu tes terpadu.</p>
+                    <h3>Uji Kompetensi Bab 3</h3>
+                    <p>Evaluasi pemahamanmu tentang PLSV dan PtLSV dalam satu tes terpadu. 20 soal + pembahasan lengkap.</p>
                 </div>
                 <div class="btn-enter" style="background: rgba(255,255,255,0.2); color: white;">
                     <i class="fas fa-play"></i>
@@ -512,30 +537,37 @@
         </div>
 
         <!-- Capaian Pembelajaran -->
-        <div class="curriculum-box animate" style="animation-delay: 0.5s;">
+        <div class="curriculum-box animate" style="animation-delay: 0.6s;">
             <div class="cp-text">
                 <h2>📌 Capaian Pembelajaran</h2>
-                <p>Di akhir fase D, peserta didik dapat membaca, menulis, dan membandingkan bilangan bulat, bilangan rasional dan irasional, bilangan desimal, bilangan berpangkat bulat dan akar, bilangan dalam notasi ilmiah.</p>
+                <p>Di akhir fase D, peserta didik dapat mengenali, memahami, dan menyelesaikan persamaan dan pertidaksamaan linier satu variabel. Mereka dapat memodelkan dan menyelesaikan masalah sehari-hari yang berkaitan dengan persamaan dan pertidaksamaan linier satu variabel.</p>
+                <p style="margin-top: 15px; font-size: 0.9rem;"><i class="fas fa-check-circle" style="color: var(--tertiary-light);"></i> Tujuan Pembelajaran:</p>
+                <ul style="margin-left: 20px; list-style-type: disc; opacity: 0.9;">
+                    <li>Memahami konsep persamaan linier satu variabel (PLSV).</li>
+                    <li>Menyelesaikan PLSV dengan berbagai metode.</li>
+                    <li>Memahami konsep pertidaksamaan linier satu variabel (PtLSV).</li>
+                    <li>Menyelesaikan masalah kontekstual yang berkaitan dengan PtLSV.</li>
+                </ul>
             </div>
             <div class="cp-stats">
                 <div class="stat-circle">
                     <i class="fas fa-clock"></i>
-                    <span>12 JP</span>
+                    <span>16 JP</span>
                     <label>Alokasi Waktu</label>
                 </div>
                 <div class="stat-circle">
                     <i class="fas fa-brain"></i>
-                    <span>3 Sub</span>
+                    <span>4 Sub</span>
                     <label>Kompetensi</label>
                 </div>
                 <div class="stat-circle">
                     <i class="fas fa-video"></i>
-                    <span>4 Video</span>
+                    <span>6 Video</span>
                     <label>Pembahasan</label>
                 </div>
                 <div class="stat-circle">
                     <i class="fas fa-question-circle"></i>
-                    <span>20+ Soal</span>
+                    <span>30+ Soal</span>
                     <label>Latihan</label>
                 </div>
             </div>
@@ -544,7 +576,7 @@
 
     <footer>
         <p>&copy; 2024 MathMaster8 - Kurikulum Merdeka | Matematika Kelas VIII</p>
-        <p style="margin-top: 8px; opacity: 0.6;">"Matematika adalah bahasa alam semesta." - Galileo Galilei</p>
+        <p style="margin-top: 8px; opacity: 0.6;">"Aljabar adalah pintu menuju matematika yang lebih tinggi." - N.A.</p>
     </footer>
 
     <script>
