--- a/bab5-persamaan-garis.html
+++ b/bab5-persamaan-garis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bab 1: Bilangan Berpangkat | MathMaster8</title>
+    <title>Bab 5: Persamaan Garis Lurus | MathMaster8</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,7 +19,14 @@
             --primary-light: #14b8a6;
             --primary-soft: #ccfbf1;
             --primary-dark: #0f766e;
+            --secondary: #6366f1;
+            --secondary-light: #818cf8;
+            --secondary-soft: #e0e7ff;
+            --secondary-dark: #4f46e5;
             --accent: #f59e0b;
+            --accent-light: #fbbf24;
+            --accent-soft: #fff3cd;
+            --accent-dark: #b45309;
             --success: #22c55e;
             --danger: #ef4444;
             --dark: #0f172a;
@@ -33,7 +40,7 @@
             --gray-600: #475569;
             --shadow-sm: 0 1px 3px 0 rgba(0,0,0,0.05);
             --shadow: 0 10px 25px -5px rgba(0,0,0,0.05);
-            --shadow-lg: 0 20px 40px -15px rgba(13,148,136,0.15);
+            --shadow-lg: 0 20px 40px -15px rgba(245,158,11,0.15);
             --transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             --border-radius: 24px;
             --border-radius-lg: 32px;
@@ -74,7 +81,7 @@
             display: flex;
             align-items: center;
             gap: 12px;
-            color: var(--primary);
+            color: var(--accent);
             text-decoration: none;
             font-weight: 700;
             font-size: 0.95rem;
@@ -83,7 +90,7 @@
 
         .back-link:hover {
             transform: translateX(-6px);
-            color: var(--primary-dark);
+            color: var(--accent-dark);
         }
 
         .chapter-badge {
@@ -91,8 +98,8 @@
             font-weight: 800;
             text-transform: uppercase;
             letter-spacing: 1.5px;
-            color: var(--primary);
-            background: var(--primary-soft);
+            color: var(--accent);
+            background: var(--accent-soft);
             padding: 6px 18px;
             border-radius: 60px;
         }
@@ -101,7 +108,7 @@
            3. HERO SECTION (KONSISTEN)
            ========================================= */
         .chapter-header {
-            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+            background: linear-gradient(135deg, var(--accent) 0%, var(--accent-dark) 100%);
             color: white;
             padding: 80px 5% 120px;
             text-align: center;
@@ -111,7 +118,7 @@
         }
 
         .chapter-header::before {
-            content: "🔢";
+            content: "📈";
             position: absolute;
             font-size: 200px;
             top: -50px;
@@ -174,7 +181,7 @@
             left: 0;
             width: 6px;
             height: 100%;
-            background: var(--primary);
+            background: var(--accent);
             opacity: 0;
             transition: var(--transition);
         }
@@ -182,7 +189,7 @@
         .sub-card:hover {
             transform: translateY(-5px) scale(1.01);
             box-shadow: var(--shadow-lg);
-            border-color: var(--primary-light);
+            border-color: var(--accent-light);
         }
 
         .sub-card:hover::before {
@@ -192,18 +199,18 @@
         .icon-box {
             width: 120px;
             height: 120px;
-            background: var(--primary-soft);
+            background: var(--accent-soft);
             border-radius: 30px;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 48px;
-            color: var(--primary-dark);
+            color: var(--accent-dark);
             transition: var(--transition);
         }
 
         .sub-card:hover .icon-box {
-            background: var(--primary);
+            background: var(--accent);
             color: white;
             transform: rotate(5deg);
         }
@@ -251,18 +258,18 @@
         .btn-enter {
             width: 60px;
             height: 60px;
-            background: var(--primary-soft);
+            background: var(--accent-soft);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: var(--primary-dark);
+            color: var(--accent-dark);
             font-size: 1.2rem;
             transition: var(--transition);
         }
 
         .sub-card:hover .btn-enter {
-            background: var(--primary);
+            background: var(--accent);
             color: white;
             transform: translateX(8px);
         }
@@ -271,7 +278,7 @@
            5. FINAL CARD
            ========================================= */
         .final-card {
-            background: linear-gradient(145deg, var(--accent), #b45309);
+            background: linear-gradient(145deg, var(--accent), var(--accent-dark));
             border: none;
         }
         .final-card .icon-box {
@@ -305,7 +312,7 @@
         }
 
         .curriculum-box::after {
-            content: "📏";
+            content: "📊";
             position: absolute;
             font-size: 150px;
             bottom: -30px;
@@ -322,7 +329,7 @@
         }
 
         .cp-text h2 {
-            color: var(--primary-light);
+            color: var(--accent-light);
             margin-bottom: 15px;
             font-size: 1.8rem;
             font-weight: 700;
@@ -355,7 +362,7 @@
 
         .stat-circle i {
             font-size: 26px;
-            color: var(--primary-light);
+            color: var(--accent-light);
             margin-bottom: 12px;
         }
 
@@ -423,15 +430,15 @@
         <a href="index.html" class="back-link">
             <i class="fas fa-arrow-left"></i> Kembali ke Beranda
         </a>
-        <span class="chapter-badge"><i class="fas fa-star"></i> Bab 1: Bilangan Berpangkat</span>
+        <span class="chapter-badge"><i class="fas fa-star"></i> Bab 5: Persamaan Garis Lurus</span>
     </div>
 
     <!-- Hero Section -->
     <header class="chapter-header">
         <div class="animate">
-            <p style="font-size: 0.8rem; letter-spacing: 3px; margin-bottom: 10px;">UNIT PEMBELAJARAN 01</p>
-            <h1>Bilangan Berpangkat</h1>
-            <p>Mengeksplorasi dunia angka besar dan kecil melalui konsep perpangkatan, penarikan akar, dan notasi ilmiah yang efisien.</p>
+            <p style="font-size: 0.8rem; letter-spacing: 3px; margin-bottom: 10px;">UNIT PEMBELAJARAN 05</p>
+            <h1>Persamaan Garis Lurus</h1>
+            <p>Memahami grafik, kemiringan (gradien), dan bentuk persamaan garis lurus serta penerapannya dalam pemecahan masalah.</p>
         </div>
     </header>
 
@@ -439,54 +446,38 @@
     <main class="container">
         <div class="learning-grid">
             
-            <!-- Sub Bab 1: Sifat-sifat Eksponen -->
-            <div class="sub-card animate" style="animation-delay: 0.1s;" onclick="location.href='sub1-1-eksponen.html'">
+            <!-- Sub Bab A: Grafik Persamaan Garis Lurus -->
+            <div class="sub-card animate" style="animation-delay: 0.1s;" onclick="location.href='sub5-1-grafik.html'">
                 <div class="icon-box">
-                    <i class="fas fa-superscript"></i>
+                    <i class="fas fa-chart-line"></i>
                 </div>
                 <div class="sub-info">
                     <div class="tag-group">
                         <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
-                        <span class="tag tag-doc"><i class="fas fa-file-alt"></i> Materi</span>
+                        <span class="tag tag-interactive"><i class="fas fa-robot"></i> Simulator Grafik</span>
+                        <span class="tag tag-doc"><i class="fas fa-file-alt"></i> Langkah-langkah</span>
                     </div>
-                    <h3>Sifat-sifat Eksponen</h3>
-                    <p>Pelajari perkalian, pembagian, dan perpangkatan pada bilangan berpangkat bulat positif dan negatif.</p>
+                    <h3>A. Grafik Persamaan Garis Lurus</h3>
+                    <p>Pelajari cara menggambar grafik persamaan garis lurus y = mx + c, menentukan titik potong sumbu, dan menginterpretasi grafik.</p>
                 </div>
                 <div class="btn-enter">
                     <i class="fas fa-chevron-right"></i>
                 </div>
             </div>
 
-            <!-- Sub Bab 2: Bilangan Akar -->
-            <div class="sub-card animate" style="animation-delay: 0.2s;" onclick="location.href='sub1-2-akar.html'">
+            <!-- Sub Bab B: Pengertian Kemiringan (Gradien) -->
+            <div class="sub-card animate" style="animation-delay: 0.2s;" onclick="location.href='sub5-2-kemiringan.html'">
                 <div class="icon-box">
-                    <i class="fas fa-square-root-variable"></i>
+                    <i class="fas fa-mountain"></i>
                 </div>
                 <div class="sub-info">
                     <div class="tag-group">
                         <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
-                        <span class="tag tag-interactive"><i class="fas fa-calculator"></i> Interaktif</span>
+                        <span class="tag tag-interactive"><i class="fas fa-calculator"></i> Kalkulator Gradien</span>
+                        <span class="tag tag-quiz"><i class="fas fa-pencil-alt"></i> Latihan</span>
                     </div>
-                    <h3>Bilangan Akar</h3>
-                    <p>Menyederhanakan bentuk akar dan memahami hubungan antara pangkat pecahan dengan bentuk akar.</p>
-                </div>
-                <div class="btn-enter">
-                    <i class="fas fa-chevron-right"></i>
-                </div>
-            </div>
-
-            <!-- Sub Bab 3: Notasi Ilmiah -->
-            <div class="sub-card animate" style="animation-delay: 0.3s;" onclick="location.href='sub1-3-notasi.html'">
-                <div class="icon-box">
-                    <i class="fas fa-microscope"></i>
-                </div>
-                <div class="sub-info">
-                    <div class="tag-group">
-                        <span class="tag tag-doc"><i class="fas fa-pencil-alt"></i> Latihan</span>
-                        <span class="tag tag-interactive"><i class="fas fa-robot"></i> Simulator</span>
-                    </div>
-                    <h3>Notasi Ilmiah</h3>
-                    <p>Cara menuliskan angka yang sangat besar atau sangat kecil secara ringkas menggunakan pangkat sepuluh.</p>
+                    <h3>B. Pengertian Kemiringan</h3>
+                    <p>Definisi gradien, rumus kemiringan garis melalui dua titik, hubungan gradien dengan sudut, dan gradien garis sejajar & tegak lurus.</p>
                 </div>
                 <div class="btn-enter">
                     <i class="fas fa-chevron-right"></i>
@@ -494,7 +485,7 @@
             </div>
 
             <!-- Final Test Card -->
-            <div class="sub-card final-card animate" style="animation-delay: 0.4s;" onclick="location.href='kuis-bab1.html'">
+            <div class="sub-card final-card animate" style="animation-delay: 0.3s;" onclick="location.href='kuis-bab5.html'">
                 <div class="icon-box" style="background: rgba(255,255,255,0.2); color: white;">
                     <i class="fas fa-trophy"></i>
                 </div>
@@ -502,8 +493,8 @@
                     <div class="tag-group">
                         <span class="tag" style="background: #ffedd5; color: #7b341e;">🏆 Final Test</span>
                     </div>
-                    <h3>Uji Kompetensi Bab 1</h3>
-                    <p>Evaluasi pemahamanmu tentang eksponen, akar, dan notasi ilmiah dalam satu tes terpadu.</p>
+                    <h3>Uji Kompetensi Bab 5</h3>
+                    <p>Evaluasi pemahamanmu tentang grafik persamaan garis lurus dan kemiringan. 15 soal + pembahasan lengkap.</p>
                 </div>
                 <div class="btn-enter" style="background: rgba(255,255,255,0.2); color: white;">
                     <i class="fas fa-play"></i>
@@ -512,10 +503,19 @@
         </div>
 
         <!-- Capaian Pembelajaran -->
-        <div class="curriculum-box animate" style="animation-delay: 0.5s;">
+        <div class="curriculum-box animate" style="animation-delay: 0.4s;">
             <div class="cp-text">
                 <h2>📌 Capaian Pembelajaran</h2>
-                <p>Di akhir fase D, peserta didik dapat membaca, menulis, dan membandingkan bilangan bulat, bilangan rasional dan irasional, bilangan desimal, bilangan berpangkat bulat dan akar, bilangan dalam notasi ilmiah.</p>
+                <p>Di akhir fase D, peserta didik dapat membuat dan menginterpretasi grafik persamaan garis lurus, menentukan kemiringan (gradien) garis, serta memahami hubungan antara gradien dengan bentuk persamaan garis. Mereka juga dapat menyelesaikan masalah kontekstual yang berkaitan dengan persamaan garis lurus.</p>
+                <p style="margin-top: 15px; font-size: 0.9rem;"><i class="fas fa-check-circle" style="color: var(--accent-light);"></i> Tujuan Pembelajaran:</p>
+                <ul style="margin-left: 20px; list-style-type: disc; opacity: 0.9;">
+                    <li>Menggambar grafik persamaan garis lurus y = mx + c.</li>
+                    <li>Menentukan titik potong sumbu x dan sumbu y.</li>
+                    <li>Memahami pengertian gradien sebagai kemiringan garis.</li>
+                    <li>Menghitung gradien garis melalui dua titik.</li>
+                    <li>Menentukan gradien garis sejajar dan tegak lurus.</li>
+                    <li>Menyelesaikan masalah kontekstual terkait persamaan garis.</li>
+                </ul>
             </div>
             <div class="cp-stats">
                 <div class="stat-circle">
@@ -525,7 +525,7 @@
                 </div>
                 <div class="stat-circle">
                     <i class="fas fa-brain"></i>
-                    <span>3 Sub</span>
+                    <span>2 Sub</span>
                     <label>Kompetensi</label>
                 </div>
                 <div class="stat-circle">
@@ -535,7 +535,7 @@
                 </div>
                 <div class="stat-circle">
                     <i class="fas fa-question-circle"></i>
-                    <span>20+ Soal</span>
+                    <span>25+ Soal</span>
                     <label>Latihan</label>
                 </div>
             </div>
@@ -544,7 +544,7 @@
 
     <footer>
         <p>&copy; 2024 MathMaster8 - Kurikulum Merdeka | Matematika Kelas VIII</p>
-        <p style="margin-top: 8px; opacity: 0.6;">"Matematika adalah bahasa alam semesta." - Galileo Galilei</p>
+        <p style="margin-top: 8px; opacity: 0.6;">"Garis lurus adalah jalan terpendek antara dua titik." - N.A.</p>
     </footer>
 
     <script>
