--- a/bab6-statistika.html
+++ b/bab6-statistika.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bab 1: Bilangan Berpangkat | MathMaster8</title>
+    <title>Bab 4: Statistika | MathMaster8</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,6 +19,9 @@
             --primary-light: #14b8a6;
             --primary-soft: #ccfbf1;
             --primary-dark: #0f766e;
+            --secondary: #6366f1;
+            --secondary-light: #818cf8;
+            --secondary-soft: #e0e7ff;
             --accent: #f59e0b;
             --success: #22c55e;
             --danger: #ef4444;
@@ -33,7 +36,7 @@
             --gray-600: #475569;
             --shadow-sm: 0 1px 3px 0 rgba(0,0,0,0.05);
             --shadow: 0 10px 25px -5px rgba(0,0,0,0.05);
-            --shadow-lg: 0 20px 40px -15px rgba(13,148,136,0.15);
+            --shadow-lg: 0 20px 40px -15px rgba(99,102,241,0.15);
             --transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             --border-radius: 24px;
             --border-radius-lg: 32px;
@@ -101,7 +104,7 @@
            3. HERO SECTION (KONSISTEN)
            ========================================= */
         .chapter-header {
-            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+            background: linear-gradient(135deg, var(--secondary) 0%, #4f46e5 100%);
             color: white;
             padding: 80px 5% 120px;
             text-align: center;
@@ -111,7 +114,7 @@
         }
 
         .chapter-header::before {
-            content: "🔢";
+            content: "📊";
             position: absolute;
             font-size: 200px;
             top: -50px;
@@ -174,7 +177,7 @@
             left: 0;
             width: 6px;
             height: 100%;
-            background: var(--primary);
+            background: var(--secondary);
             opacity: 0;
             transition: var(--transition);
         }
@@ -182,7 +185,7 @@
         .sub-card:hover {
             transform: translateY(-5px) scale(1.01);
             box-shadow: var(--shadow-lg);
-            border-color: var(--primary-light);
+            border-color: var(--secondary-light);
         }
 
         .sub-card:hover::before {
@@ -192,18 +195,18 @@
         .icon-box {
             width: 120px;
             height: 120px;
-            background: var(--primary-soft);
+            background: var(--secondary-soft);
             border-radius: 30px;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 48px;
-            color: var(--primary-dark);
+            color: var(--secondary);
             transition: var(--transition);
         }
 
         .sub-card:hover .icon-box {
-            background: var(--primary);
+            background: var(--secondary);
             color: white;
             transform: rotate(5deg);
         }
@@ -251,18 +254,18 @@
         .btn-enter {
             width: 60px;
             height: 60px;
-            background: var(--primary-soft);
+            background: var(--secondary-soft);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: var(--primary-dark);
+            color: var(--secondary);
             font-size: 1.2rem;
             transition: var(--transition);
         }
 
         .sub-card:hover .btn-enter {
-            background: var(--primary);
+            background: var(--secondary);
             color: white;
             transform: translateX(8px);
         }
@@ -271,7 +274,7 @@
            5. FINAL CARD
            ========================================= */
         .final-card {
-            background: linear-gradient(145deg, var(--accent), #b45309);
+            background: linear-gradient(145deg, var(--secondary), #4f46e5);
             border: none;
         }
         .final-card .icon-box {
@@ -305,7 +308,7 @@
         }
 
         .curriculum-box::after {
-            content: "📏";
+            content: "📈";
             position: absolute;
             font-size: 150px;
             bottom: -30px;
@@ -322,7 +325,7 @@
         }
 
         .cp-text h2 {
-            color: var(--primary-light);
+            color: var(--secondary-light);
             margin-bottom: 15px;
             font-size: 1.8rem;
             font-weight: 700;
@@ -355,7 +358,7 @@
 
         .stat-circle i {
             font-size: 26px;
-            color: var(--primary-light);
+            color: var(--secondary-light);
             margin-bottom: 12px;
         }
 
@@ -423,15 +426,15 @@
         <a href="index.html" class="back-link">
             <i class="fas fa-arrow-left"></i> Kembali ke Beranda
         </a>
-        <span class="chapter-badge"><i class="fas fa-star"></i> Bab 1: Bilangan Berpangkat</span>
+        <span class="chapter-badge"><i class="fas fa-star"></i> Bab 6: Statistika</span>
     </div>
 
     <!-- Hero Section -->
     <header class="chapter-header">
         <div class="animate">
-            <p style="font-size: 0.8rem; letter-spacing: 3px; margin-bottom: 10px;">UNIT PEMBELAJARAN 01</p>
-            <h1>Bilangan Berpangkat</h1>
-            <p>Mengeksplorasi dunia angka besar dan kecil melalui konsep perpangkatan, penarikan akar, dan notasi ilmiah yang efisien.</p>
+            <p style="font-size: 0.8rem; letter-spacing: 3px; margin-bottom: 10px;">UNIT PEMBELAJARAN 06</p>
+            <h1>Statistika</h1>
+            <p>Memahami data melalui ukuran pemusatan dan penyebaran. Belajar membaca, mengolah, dan menginterpretasi data dengan tepat.</p>
         </div>
     </header>
 
@@ -439,54 +442,38 @@
     <main class="container">
         <div class="learning-grid">
             
-            <!-- Sub Bab 1: Sifat-sifat Eksponen -->
-            <div class="sub-card animate" style="animation-delay: 0.1s;" onclick="location.href='sub1-1-eksponen.html'">
+            <!-- Sub Bab 1: Pemusatan Data (Mean, Median, Modus) -->
+            <div class="sub-card animate" style="animation-delay: 0.1s;" onclick="location.href='sub6-1-pemusatan.html'">
                 <div class="icon-box">
-                    <i class="fas fa-superscript"></i>
+                    <i class="fas fa-chart-pie"></i>
                 </div>
                 <div class="sub-info">
                     <div class="tag-group">
                         <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
+                        <span class="tag tag-interactive"><i class="fas fa-calculator"></i> Kalkulator</span>
                         <span class="tag tag-doc"><i class="fas fa-file-alt"></i> Materi</span>
                     </div>
-                    <h3>Sifat-sifat Eksponen</h3>
-                    <p>Pelajari perkalian, pembagian, dan perpangkatan pada bilangan berpangkat bulat positif dan negatif.</p>
+                    <h3>Pemusatan Data</h3>
+                    <p>Pelajari mean (rata-rata), median (nilai tengah), dan modus (nilai yang sering muncul). Dilengkapi contoh soal dan simulasi interaktif.</p>
                 </div>
                 <div class="btn-enter">
                     <i class="fas fa-chevron-right"></i>
                 </div>
             </div>
 
-            <!-- Sub Bab 2: Bilangan Akar -->
-            <div class="sub-card animate" style="animation-delay: 0.2s;" onclick="location.href='sub1-2-akar.html'">
+            <!-- Sub Bab 2: Penyebaran Data (Jangkauan, Kuartil, Simpangan) -->
+            <div class="sub-card animate" style="animation-delay: 0.2s;" onclick="location.href='sub6-2-penyebaran.html'">
                 <div class="icon-box">
-                    <i class="fas fa-square-root-variable"></i>
+                    <i class="fas fa-chart-bar"></i>
                 </div>
                 <div class="sub-info">
                     <div class="tag-group">
                         <span class="tag tag-video"><i class="fas fa-play"></i> Video</span>
-                        <span class="tag tag-interactive"><i class="fas fa-calculator"></i> Interaktif</span>
+                        <span class="tag tag-interactive"><i class="fas fa-chart-line"></i> Visualisasi</span>
+                        <span class="tag tag-quiz"><i class="fas fa-pencil-alt"></i> Latihan</span>
                     </div>
-                    <h3>Bilangan Akar</h3>
-                    <p>Menyederhanakan bentuk akar dan memahami hubungan antara pangkat pecahan dengan bentuk akar.</p>
-                </div>
-                <div class="btn-enter">
-                    <i class="fas fa-chevron-right"></i>
-                </div>
-            </div>
-
-            <!-- Sub Bab 3: Notasi Ilmiah -->
-            <div class="sub-card animate" style="animation-delay: 0.3s;" onclick="location.href='sub1-3-notasi.html'">
-                <div class="icon-box">
-                    <i class="fas fa-microscope"></i>
-                </div>
-                <div class="sub-info">
-                    <div class="tag-group">
-                        <span class="tag tag-doc"><i class="fas fa-pencil-alt"></i> Latihan</span>
-                        <span class="tag tag-interactive"><i class="fas fa-robot"></i> Simulator</span>
-                    </div>
-                    <h3>Notasi Ilmiah</h3>
-                    <p>Cara menuliskan angka yang sangat besar atau sangat kecil secara ringkas menggunakan pangkat sepuluh.</p>
+                    <h3>Penyebaran Data</h3>
+                    <p>Jangkauan, kuartil, jangkauan interkuartil, dan simpangan. Pahami seberapa tersebar data dari pusatnya.</p>
                 </div>
                 <div class="btn-enter">
                     <i class="fas fa-chevron-right"></i>
@@ -494,7 +481,7 @@
             </div>
 
             <!-- Final Test Card -->
-            <div class="sub-card final-card animate" style="animation-delay: 0.4s;" onclick="location.href='kuis-bab1.html'">
+            <div class="sub-card final-card animate" style="animation-delay: 0.3s;" onclick="location.href='kuis-bab6.html'">
                 <div class="icon-box" style="background: rgba(255,255,255,0.2); color: white;">
                     <i class="fas fa-trophy"></i>
                 </div>
@@ -502,8 +489,8 @@
                     <div class="tag-group">
                         <span class="tag" style="background: #ffedd5; color: #7b341e;">🏆 Final Test</span>
                     </div>
-                    <h3>Uji Kompetensi Bab 1</h3>
-                    <p>Evaluasi pemahamanmu tentang eksponen, akar, dan notasi ilmiah dalam satu tes terpadu.</p>
+                    <h3>Uji Kompetensi Bab 4</h3>
+                    <p>Evaluasi pemahamanmu tentang pemusatan dan penyebaran data dalam satu tes terpadu. 15 soal + pembahasan lengkap.</p>
                 </div>
                 <div class="btn-enter" style="background: rgba(255,255,255,0.2); color: white;">
                     <i class="fas fa-play"></i>
@@ -512,30 +499,37 @@
         </div>
 
         <!-- Capaian Pembelajaran -->
-        <div class="curriculum-box animate" style="animation-delay: 0.5s;">
+        <div class="curriculum-box animate" style="animation-delay: 0.4s;">
             <div class="cp-text">
                 <h2>📌 Capaian Pembelajaran</h2>
-                <p>Di akhir fase D, peserta didik dapat membaca, menulis, dan membandingkan bilangan bulat, bilangan rasional dan irasional, bilangan desimal, bilangan berpangkat bulat dan akar, bilangan dalam notasi ilmiah.</p>
+                <p>Di akhir fase D, peserta didik dapat merumuskan pertanyaan, mengumpulkan, menyajikan, dan menganalisis data. Mereka dapat menentukan dan menginterpretasi ukuran pemusatan (mean, median, modus) dan ukuran penyebaran (jangkauan, kuartil, jangkauan interkuartil) untuk mengambil kesimpulan.</p>
+                <p style="margin-top: 15px; font-size: 0.9rem;"><i class="fas fa-check-circle" style="color: var(--secondary-light);"></i> Tujuan Pembelajaran:</p>
+                <ul style="margin-left: 20px; list-style-type: disc; opacity: 0.9;">
+                    <li>Menghitung mean, median, dan modus dari data tunggal dan kelompok.</li>
+                    <li>Menentukan kuartil, jangkauan, dan jangkauan interkuartil.</li>
+                    <li>Membaca dan membuat diagram batang, garis, dan lingkaran.</li>
+                    <li>Menginterpretasi data berdasarkan ukuran pemusatan dan penyebaran.</li>
+                </ul>
             </div>
             <div class="cp-stats">
                 <div class="stat-circle">
                     <i class="fas fa-clock"></i>
-                    <span>12 JP</span>
+                    <span>14 JP</span>
                     <label>Alokasi Waktu</label>
                 </div>
                 <div class="stat-circle">
                     <i class="fas fa-brain"></i>
-                    <span>3 Sub</span>
+                    <span>2 Sub</span>  <!-- Tetap 2 Sub, hanya nomor bab yang berubah -->
                     <label>Kompetensi</label>
                 </div>
                 <div class="stat-circle">
                     <i class="fas fa-video"></i>
-                    <span>4 Video</span>
+                    <span>5 Video</span>
                     <label>Pembahasan</label>
                 </div>
                 <div class="stat-circle">
                     <i class="fas fa-question-circle"></i>
-                    <span>20+ Soal</span>
+                    <span>25+ Soal</span>
                     <label>Latihan</label>
                 </div>
             </div>
@@ -544,7 +538,7 @@
 
     <footer>
         <p>&copy; 2024 MathMaster8 - Kurikulum Merdeka | Matematika Kelas VIII</p>
-        <p style="margin-top: 8px; opacity: 0.6;">"Matematika adalah bahasa alam semesta." - Galileo Galilei</p>
+        <p style="margin-top: 8px; opacity: 0.6;">"Statistika adalah seni mengambil keputusan berdasarkan data." - N.A.</p>
     </footer>
 
     <script>
